@@ -14,8 +14,11 @@
         .col
           %button.d-block.btn.btn-primary.w-50.mx-auto#print Print
         .col
-          %button.d-block.btn.btn-primary.w-50.mx-auto#copy Copy
-  
+          %a.d-block.btn.btn-primary.w-50.mx-auto#copy{tabindex: "0", role: "button", "data-bs-trigger" => "focus", "data-bs-toggle" => "popover",
+           "data-bs-content" => "Copied !"} Copy
+              
     %pre#recovery-codes= rodauth.recovery_codes.map{ |s| h s }.join("\n\n")
 
+- content_for :js, assets([:js, :bs_tooltip])
 - content_for :js, assets([:js, :recovery_codes])
+
